# NEVAS1

./: db.sqlite3  main.py  pyproject.toml  requirements.txt
api_v1/: __init__.py
api_v1/content_blocks/: crud.py  dependencies.py  schemas.py  views.py
api_v1/courses/: crud.py  dependencies.py  schemas.py  views.py
api_v1/lessons/: crud.py  dependencies.py  schemas.py  views.py
api_v1/modules/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: base.py  db.py
core/models/models_db/: __init__.py  model.py
